--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.8
+psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 Pygments==2.7.1
+PyMySQL==0.10.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 requests==2.24.0
