--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ marshmallow-sqlalchemy = "*"
 flask-sqlalchemy = "*"
 psycopg2-binary = "*"
 pymysql = "*"
+cryptography = "*"
 
 [requires]
 python_version = "3.8"
