--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,5 +9,9 @@ COPY . /pfg
 RUN pip3 --no-cache-dir install -r requirements.txt     
 EXPOSE 5000
 
+RUN apt install -y tzdata && \
+    ln -sf /usr/share/zoneinfo/America/Sao_Paulo \
+    /etc/localtime && dpkg-reconfigure --frontend noninteractive tzdata
+
 RUN chmod u+x ./entrypoint.sh
 ENTRYPOINT ["./entrypoint.sh"]
