--- a/detect/docker-compose.yml
+++ b/detect/docker-compose.yml
@@ -44,3 +44,8 @@ services:
         restart: unless-stopped
         networks:
             - net3
+        depends_on:
+            - apnea
+            - cry
+            - bad_env
+            - still
